test/Fail/Issue4929.err
Issue4929.agda:60.1-66.6: error: [TerminationIssue]
Termination checking failed for the following functions:
  test
Problematic calls:
  λ { (↦E (there r)) → test (sntE ANY)
    ; (↦E (π {i = j})) → test (acc sntE)
    }
    (at Issue4929.agda:64.3-66.6)
  test (sntE ANY)
    (at Issue4929.agda:64.24-28)
  test (acc sntE)
    (at Issue4929.agda:65.26-30)
